// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gradientAgentControls characterization > emits stable full specs for layout=linear 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "up",
    "group": "Shape",
    "hint": "Band orientation: up/down = VERTICAL bands (columns), right/left = HORIZONTAL bands (rows); down/left also reverse the colour ramp. Set "right" for horizontal bands/stripes.",
    "key": "layer.shape.direction",
    "kind": "select",
    "label": "Band direction",
    "options": [
      "up",
      "right",
      "down",
      "left",
    ],
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.azimuth",
    "kind": "slider",
    "label": "Light angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.elevation",
    "kind": "slider",
    "label": "Light height",
    "max": 90,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "vertical",
    "group": "Layer",
    "hint": "Axis the colour ramp runs along: vertical (top→bottom) or horizontal (left→right). Independent of the band axis, so a horizontal ramp can run ACROSS vertical bands.",
    "key": "layer.color.gradientDir",
    "kind": "select",
    "label": "Gradient direction",
    "options": [
      "vertical",
      "horizontal",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=liquid 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.depth",
    "kind": "slider",
    "label": "Depth",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.highlights",
    "kind": "slider",
    "label": "Highlights",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.shadows",
    "kind": "slider",
    "label": "Shadows",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.foldScale",
    "kind": "slider",
    "label": "Fold scale",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.gloss",
    "kind": "slider",
    "label": "Gloss",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.veins",
    "kind": "slider",
    "label": "Veins",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.veinScale",
    "kind": "slider",
    "label": "Vein scale",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.ripple",
    "kind": "slider",
    "label": "Ripple",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.refract",
    "kind": "slider",
    "label": "Refraction",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.viscosity",
    "kind": "slider",
    "label": "Viscosity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=mesh 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in order. Set these to recolour the whole gradient.",
    "key": "layer.mesh.points.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.mesh.points.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.mesh.points.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.mesh.points.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.mesh.points.4.color",
    "kind": "color",
    "label": "Colour 5",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.mesh.points.5.color",
    "kind": "color",
    "label": "Colour 6",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.softness",
    "kind": "slider",
    "label": "Softness",
    "max": 100,
    "min": 10,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.drift",
    "kind": "slider",
    "label": "Drift",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=orbit 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.innerRadius",
    "kind": "slider",
    "label": "Inner radius",
    "max": 0.9,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.x",
    "kind": "slider",
    "label": "Center X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.y",
    "kind": "slider",
    "label": "Center Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.azimuth",
    "kind": "slider",
    "label": "Light angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.elevation",
    "kind": "slider",
    "label": "Light height",
    "max": 90,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "vertical",
    "group": "Layer",
    "hint": "Axis the colour ramp runs along: vertical (top→bottom) or horizontal (left→right). Independent of the band axis, so a horizontal ramp can run ACROSS vertical bands.",
    "key": "layer.color.gradientDir",
    "kind": "select",
    "label": "Gradient direction",
    "options": [
      "vertical",
      "horizontal",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=radial 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.innerRadius",
    "kind": "slider",
    "label": "Inner radius",
    "max": 0.9,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.x",
    "kind": "slider",
    "label": "Center X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.y",
    "kind": "slider",
    "label": "Center Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.azimuth",
    "kind": "slider",
    "label": "Light angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.elevation",
    "kind": "slider",
    "label": "Light height",
    "max": 90,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "vertical",
    "group": "Layer",
    "hint": "Axis the colour ramp runs along: vertical (top→bottom) or horizontal (left→right). Independent of the band axis, so a horizontal ramp can run ACROSS vertical bands.",
    "key": "layer.color.gradientDir",
    "kind": "select",
    "label": "Gradient direction",
    "options": [
      "vertical",
      "horizontal",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable specs with includePreset 1`] = `
[
  {
    "default": "linear",
    "group": "Preset",
    "hint": "The overall look. marble/oil/ink/lava/satin = liquid surfaces; ripple/stack = concentric; mesh = soft blobs; linear = simple ramp. Set this to establish a style, then override colours/blur/grain. Leave it alone when only ADJUSTING an existing gradient.",
    "key": "preset",
    "kind": "select",
    "label": "Style preset",
    "options": [
      "marble",
      "oil",
      "ink",
      "lava",
      "satin",
      "liquid",
      "ripple",
      "stack",
      "mesh",
      "linear",
      "dawn",
      "halo",
      "spectrum",
      "aurora",
      "frosted",
      "sunset",
    ],
  },
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "up",
    "group": "Shape",
    "hint": "Band orientation: up/down = VERTICAL bands (columns), right/left = HORIZONTAL bands (rows); down/left also reverse the colour ramp. Set "right" for horizontal bands/stripes.",
    "key": "layer.shape.direction",
    "kind": "select",
    "label": "Band direction",
    "options": [
      "up",
      "right",
      "down",
      "left",
    ],
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.azimuth",
    "kind": "slider",
    "label": "Light angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.light.elevation",
    "kind": "slider",
    "label": "Light height",
    "max": 90,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "vertical",
    "group": "Layer",
    "hint": "Axis the colour ramp runs along: vertical (top→bottom) or horizontal (left→right). Independent of the band axis, so a horizontal ramp can run ACROSS vertical bands.",
    "key": "layer.color.gradientDir",
    "kind": "select",
    "label": "Gradient direction",
    "options": [
      "vertical",
      "horizontal",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;

exports[`gradientAgentControls characterization — ramp default (Task 7) > emits stable full specs for the ramp default 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "ramp",
      "radialRamp",
      "conic",
      "curve",
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": 0,
    "group": "Gradient",
    "hint": "Direction of the ramp (linear) / start rotation (conic)",
    "key": "layer.ramp.angle",
    "kind": "slider",
    "label": "Angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "once",
    "group": "Layer",
    "hint": "Repeat the ramp: once / mirror (reflect) / tile ×N",
    "key": "layer.color.repeat",
    "kind": "select",
    "label": "Repeat",
    "options": [
      "once",
      "mirror",
      "tile",
    ],
  },
  {
    "default": "linear",
    "group": "Layer",
    "hint": "Ramp interpolation curve — smooth kills banding on long ramps",
    "key": "layer.color.falloff",
    "kind": "select",
    "label": "Falloff",
    "options": [
      "linear",
      "ease",
      "smooth",
    ],
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "Off = blur the whole thing evenly; Radial = keep a round spot sharp; Linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Bloom",
    "key": "post.bloom",
    "kind": "switch",
    "label": "Bloom",
    "sectionToggle": true,
  },
  {
    "default": 0.6,
    "group": "Effects/Bloom",
    "hint": "How strong the glow is",
    "key": "post.bloomStrength",
    "kind": "slider",
    "label": "Bloom strength",
    "max": 3,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.4,
    "group": "Effects/Bloom",
    "hint": "How far the glow spreads",
    "key": "post.bloomRadius",
    "kind": "slider",
    "label": "Bloom radius",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0.8,
    "group": "Effects/Bloom",
    "hint": "How bright a pixel must be before it blooms",
    "key": "post.bloomThreshold",
    "kind": "slider",
    "label": "Bloom threshold",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Color",
    "key": "post.color",
    "kind": "switch",
    "label": "Color",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Overall brightness",
    "key": "post.exposure",
    "kind": "slider",
    "label": "Exposure",
    "max": 2,
    "min": 0.2,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "Difference between darks and lights",
    "key": "post.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 1,
    "group": "Effects/Color",
    "hint": "How vivid the colours are",
    "key": "post.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 2,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 0,
    "group": "Effects/Color",
    "hint": "Rotates every colour around the wheel",
    "key": "post.hue",
    "kind": "slider",
    "label": "Hue",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Duotone",
    "key": "post.duotone",
    "kind": "switch",
    "label": "Duotone",
    "sectionToggle": true,
  },
  {
    "default": "#1a1a2e",
    "group": "Effects/Duotone",
    "hint": "Colour the darkest tones become",
    "key": "post.duotoneShadow",
    "kind": "color",
    "label": "Duotone shadow",
  },
  {
    "default": "#f5f0e8",
    "group": "Effects/Duotone",
    "hint": "Colour the brightest tones become",
    "key": "post.duotoneHighlight",
    "kind": "color",
    "label": "Duotone highlight",
  },
  {
    "default": 1,
    "group": "Effects/Duotone",
    "hint": "How much of the duotone shows through",
    "key": "post.duotoneMix",
    "kind": "slider",
    "label": "Duotone mix",
    "max": 1,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Chroma",
    "key": "post.chroma",
    "kind": "switch",
    "label": "Chroma",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Chroma",
    "hint": "Colour fringing at the edges",
    "key": "post.chromaAmount",
    "kind": "slider",
    "label": "Chroma amount",
    "max": 1.5,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Blur",
    "key": "post.blur",
    "kind": "switch",
    "label": "Blur",
    "sectionToggle": true,
  },
  {
    "default": 0.01,
    "group": "Effects/Blur",
    "hint": "Soft bokeh-style blur",
    "key": "post.blurAmount",
    "kind": "slider",
    "label": "Blur amount",
    "max": 0.04,
    "min": 0,
    "step": 0.002,
  },
  {
    "default": false,
    "group": "Effects/Distort",
    "key": "post.distort",
    "kind": "switch",
    "label": "Distort",
    "sectionToggle": true,
  },
  {
    "default": 0.3,
    "group": "Effects/Distort",
    "hint": "Wobbles the whole image with noise",
    "key": "post.distortAmount",
    "kind": "slider",
    "label": "Distort amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": false,
    "group": "Effects/Film",
    "key": "post.film",
    "kind": "switch",
    "label": "Film",
    "sectionToggle": true,
  },
  {
    "default": 0.35,
    "group": "Effects/Film",
    "hint": "How strong the scanlines are",
    "key": "post.filmIntensity",
    "kind": "slider",
    "label": "Film intensity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": false,
    "group": "Effects/Halftone",
    "key": "post.halftone",
    "kind": "switch",
    "label": "Halftone",
    "sectionToggle": true,
  },
  {
    "default": 4,
    "group": "Effects/Halftone",
    "hint": "Size of the print dots",
    "key": "post.halftoneRadius",
    "kind": "slider",
    "label": "Halftone radius",
    "max": 20,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Dot screen",
    "key": "post.dotScreen",
    "kind": "switch",
    "label": "Dot screen",
    "sectionToggle": true,
  },
  {
    "default": 1,
    "group": "Effects/Dot screen",
    "hint": "Size of the dot pattern",
    "key": "post.dotScreenScale",
    "kind": "slider",
    "label": "Dot screen scale",
    "max": 4,
    "min": 0.2,
    "step": 0.1,
  },
  {
    "default": 1.57,
    "group": "Effects/Dot screen",
    "hint": "Rotates the dot grid",
    "key": "post.dotScreenAngle",
    "kind": "slider",
    "label": "Dot screen angle",
    "max": 3.14,
    "min": -3.14,
    "step": 0.05,
  },
  {
    "default": false,
    "group": "Effects/Glitch",
    "key": "post.glitch",
    "kind": "switch",
    "label": "Glitch",
    "sectionToggle": true,
  },
  {
    "default": false,
    "group": "Effects/Grain",
    "key": "post.grain",
    "kind": "switch",
    "label": "Grain",
    "sectionToggle": true,
  },
  {
    "default": 0.25,
    "group": "Effects/Grain",
    "hint": "How strong the grain is",
    "key": "post.grainAmount",
    "kind": "slider",
    "label": "Grain amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 2,
    "group": "Effects/Grain",
    "hint": "How coarse the grain is",
    "key": "post.grainSize",
    "kind": "slider",
    "label": "Grain size",
    "max": 8,
    "min": 1,
    "step": 0.5,
  },
  {
    "default": false,
    "group": "Effects/Vignette",
    "key": "post.vignette",
    "kind": "switch",
    "label": "Vignette",
    "sectionToggle": true,
  },
  {
    "default": 0.4,
    "group": "Effects/Vignette",
    "hint": "How dark the corners get",
    "key": "post.vignetteAmount",
    "kind": "slider",
    "label": "Vignette amount",
    "max": 1,
    "min": 0,
    "step": 0.02,
  },
  {
    "default": 0.6,
    "group": "Effects/Vignette",
    "hint": "How far in the vignette starts to darken",
    "key": "post.vignetteRadius",
    "kind": "slider",
    "label": "Vignette radius",
    "max": 1.4,
    "min": 0.3,
    "step": 0.02,
  },
  {
    "default": 0.5,
    "group": "Effects/Vignette",
    "hint": "How gradual the vignette's edge is",
    "key": "post.vignetteSoftness",
    "kind": "slider",
    "label": "Vignette softness",
    "max": 0.8,
    "min": 0.05,
    "step": 0.02,
  },
]
`;
